# ts_diff_qc

./: .env  cli.py  dockerfile  explore.ipynb  k8schema.txt  kub.py  kub.yaml  kubernetes-schema.txt  poetry.toml  pyproject.toml  readme.md  run copy.py  run.ipynb  run.py  run_kub.py  run_template.py  setup.sh  typer-cli.py  utils.py
.dep/diff/: environment.yml  model.py  model_config.yml
.dep/hwat/: hwat.py  hwat_pyfig.py  qvik.ipynb  run.py
.dep/hwat/dump/: analysis.ipynb  max_mem.csv
.dep/hwat/things/: logger_repo.py  resource_repo.py  sweep_repo.py
.dep/hwat/things/for_qchem/: from_pyscf.py  nn_pyscf.py
.dep/kub/: cpu_pod.yaml  kub.ipynb  pod.yaml  run_kub.py
.dep/kub/dk2/: Dockerfile
.dep/previous_work/: Chaotic_TS.ipynb  ns_datagen.py  pyfig.py  qvik.ipynb  random_fields.py  run.py  ts-intro.ipynb  ts-medium.ipynb
code/: .dockerignore
data/: video_datasets.py
diff/: config.py  read.py  run.py  setup.sh
hwat/: hwat.py  run.py
hwat/dump/: qvik-test.ipynb  systems.py
hwat/things/: base.py  dist_repo.py  utils.py
hwat/things/for_torch/: torch_utils.py
hwat/things/for_upgrade/: run_cg.py
tcn/: extract.py  llm_response_ast_test.py  llm_response_ast_test_fixed.py
tcn/models/: model_factory.py
time-series/: README.md
time-series/content/: report-slide.key
time-series/kub/: cpu_job01.yml  env.yaml  gitlab-agent.yaml
time-series/kub/jupyter_config/: jupyter_notebook_config.py
time-series/previous_work/: diff_ts.py  hv-dynamic.ipynb  ns.py  run.py  ts-dash.ipynb  ts-dash.py
tmp/: max-pod.yaml
ts_diff_qc/: env.ipynb  kub.yaml
(+15 files in other folders)
